firefox map unit overflow fix

--- a/src/orgpad/styles/map_component.less
+++ b/src/orgpad/styles/map_component.less
@@ -16,6 +16,7 @@
       position: absolute;
       display: flex;
       flex-direction: column;
+      overflow: auto;
     }
 
     .link-control {
@@ -196,7 +197,7 @@
     position: absolute;
     right: 0px;
     top: 10%;
-    // height: 80%;
+    max-height: 80%;
     width: 205px;
     border: 1px solid black;
     padding: 10px;
